# debian-packaging-tutorial

./: .gitignore  README.md
library-package/: CMakeLists.txt  simple-lib.c  simple-lib.h
library-package/debian/: changelog  control  copyright
simple-package/: CMakeLists.txt
simple-package/debian/: changelog  control  copyright
simple-service/: CMakeLists.txt  main.c  simple-service.service
simple-service/debian/: changelog  control  copyright
thirdparty-package/: CMakeLists.txt  main.c
thirdparty-package/debian/: changelog  control  copyright
thirdparty-package/patches/: 001-mypatch.diff  series
